syntax = "proto3";

package productpb;
option go_package = "hex-postgres-grpc/proto/product;productpb";

import "google/protobuf/timestamp.proto";

service ProductService {
    rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse);
    rpc GetProduct (GetProductRequest) returns (GetProductResponse);
    rpc UpdateProduct (UpdateProductRequest) returns (UpdateProductResponse);
    rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductResponse);
    rpc ListProducts (ListProductsRequest) returns (ListProductsResponse);
}

message ProductMessage {
    string id = 1;
    string name = 2;
    double price = 3;
    google.protobuf.Timestamp created_at = 4;
}

message CreateProductRequest {
    string name = 1;
    double price = 2;
}

message CreateProductResponse {
    ProductMessage product = 1;
}

message GetProductRequest {
    string id = 1;
}

message GetProductResponse {
    ProductMessage product = 1;
}

message UpdateProductRequest {
    string id = 1;
    string name = 2;
    double price = 3;
}

message UpdateProductResponse {
    ProductMessage product = 1;
}

message DeleteProductRequest {
    string id = 1;
}

message DeleteProductResponse {
    bool success = 1;
}

message ListProductsRequest {}

message ListProductsResponse {
    repeated ProductMessage products = 1;
}
